--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_fonts: ^6.2.1
+  syncfusion_flutter_calendar: ^25.1.39
 
 dev_dependencies:
   flutter_test:
