--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   # google_fonts: ^6.2.1
   google_fonts: ^6.2.0
   syncfusion_flutter_calendar: ^25.1.39
+  get: any
 
 dev_dependencies:
   flutter_test:
